--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import csv\n",
@@ -24,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB = db_structure.DB('sample2')"
+    "DB = db_structure.DB('TOPICC')"
    ]
   },
   {
@@ -247,6 +256,126 @@
     "coly = DB.tables['B'].columns['col4']\n",
     "colz = DB.tables['F'].columns['col8']\n",
     "DB.find_paths_multi_columns([colx, coly, colz])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'D': <db_structure.TableRelation at 0x55aa7f0>,\n",
+       " 'C': <db_structure.TableRelation at 0x55aaa58>}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.tables['A'].children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.tables['C'].name in list(DB.tables['A'].children.keys()) + list(DB.tables['A'].parents.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'A', 'df':    col1_[A] col2_[A]  col3_[A]\n",
+       " 0         1        A         3\n",
+       " 1         1        A         4\n",
+       " 2         1        B         5\n",
+       " 3         2        B         6\n",
+       " 4         2        C         7\n",
+       " 5         2        C         8, 'columns': {'col1': Column col1 in tables {A, C},\n",
+       "  'col2': Column col2 in tables {A, D},\n",
+       "  'col3': Column col3 in tables {A, B}}, 'children': {'D': <db_structure.TableRelation at 0x55aa7f0>,\n",
+       "  'C': <db_structure.TableRelation at 0x55aaa58>}, 'siblings': {'B': <db_structure.TableRelation at 0x55aaeb8>}, 'parents': {}}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.tables['A'].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [DB.tables['A'], DB.tables['B']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-74a45b6f5ce6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mDB\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtables\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'A'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "x.get(DB.tables['A']).columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DB.tables"
    ]
   },
   {
