format config files

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,276 +24,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['col2', 'col6', 'col1', 'col5', 'col4', 'col7', 'col3']\n",
+      "Which column labels are used to join tables together? Use space to separate them. Use * to indicate all. Case-sensitive. *\n",
+      "Do you want to exclude any of these columns from being used as data visualization inputs/outputs [Y/N]? N\n",
+      "Do you want to create other foreign key links? [Y/N]? N\n"
+     ]
+    }
+   ],
+   "source": [
+    "DB = db_structure.DB('sample2')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB = db_structure.DB('TOPICC')\n",
-    "all_columns = DB.get_all_columns()\n",
-    "repetitive_columns = DB.get_common_column_names()\n",
-    "non_repetitive_columns = [x for x in all_columns if x not in repetitive_columns]\n",
-    "exclude_columns = DB.exclude_columns_from_data_viz\n",
-    "\n",
-    "column_label_to_obj = {f'{x.name}': x for x in non_repetitive_columns}"
+    "import json\n",
+    "path = 'datasets/TOPICC/TOPICC.config'\n",
+    "with open(path, 'r') as f:\n",
+    "    x = json.load(f)\n",
+    "with open(path, 'w') as f:\n",
+    "    json.dump()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_col_obj(*args):\n",
-    "    args = [[] if x is None else x for x in args]\n",
-    "    args = u.flatten(args)\n",
-    "    return [column_label_to_obj[x] for x in args]\n",
-    "\n",
-    "outcome_var_chosen = 'DeathMode'\n",
-    "ind_vars_chosen = ['Sex', 'Ethnicity']\n",
-    "current_col_obj_list = get_col_obj(outcome_var_chosen, ind_vars_chosen)\n",
-    "paths = DB.find_paths_multi_columns(current_col_obj_list)\n",
-    "df = DB.get_biggest_joined_df_option_from_paths(paths)\n",
-    "\n",
-    "outcome_var_with_table = None\n",
-    "ind_vars_with_table = []\n",
-    "for col_obj in current_col_obj_list:\n",
-    "    for table in col_obj.tables:\n",
-    "        col_header = f'{col_obj.name}_[{table.name}]'\n",
-    "        if col_header in df.columns:\n",
-    "            if col_obj.name == outcome_var_chosen:\n",
-    "                outcome_var_with_table = col_header\n",
-    "            else:\n",
-    "                ind_vars_with_table.append(col_header)\n",
-    "all_vars_with_table = [outcome_var_with_table] + ind_vars_with_table\n",
-    "df = df.loc[:, all_vars_with_table]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>DeathMode_[DEATH]</th>\n",
-       "      <th>Sex_[HOSPITALADMIT]</th>\n",
-       "      <th>Ethnicity_[HOSPITALADMIT]</th>\n",
-       "      <th>Brain death</th>\n",
-       "      <th>Failed resuscitation</th>\n",
-       "      <th>Limitation of care</th>\n",
-       "      <th>Withdrawal of care</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hispanic or Latino</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>11</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Not Hispanic or Latino</td>\n",
-       "      <td>4</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Unknown or Not Reported</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Hispanic or Latino</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>6</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Not Hispanic or Latino</td>\n",
-       "      <td>8</td>\n",
-       "      <td>15</td>\n",
-       "      <td>12</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Unknown or Not Reported</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "DeathMode_[DEATH] Sex_[HOSPITALADMIT] Ethnicity_[HOSPITALADMIT]  Brain death  \\\n",
-       "0                              Female        Hispanic or Latino            4   \n",
-       "1                              Female    Not Hispanic or Latino            4   \n",
-       "2                              Female   Unknown or Not Reported            5   \n",
-       "3                                Male        Hispanic or Latino            9   \n",
-       "4                                Male    Not Hispanic or Latino            8   \n",
-       "5                                Male   Unknown or Not Reported            5   \n",
-       "\n",
-       "DeathMode_[DEATH]  Failed resuscitation  Limitation of care  \\\n",
-       "0                                     5                  11   \n",
-       "1                                    14                   6   \n",
-       "2                                     8                   3   \n",
-       "3                                     4                   6   \n",
-       "4                                    15                  12   \n",
-       "5                                     7                   8   \n",
-       "\n",
-       "DeathMode_[DEATH]  Withdrawal of care  \n",
-       "0                                  16  \n",
-       "1                                  32  \n",
-       "2                                  25  \n",
-       "3                                  13  \n",
-       "4                                  32  \n",
-       "5                                  23  "
+       "{'global_fks': ['PudID'], 'custom_fks': [], 'exclude_columns': ['PudID']}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g = df.groupby(ind_vars_with_table)[outcome_var_with_table]\n",
-    "g.value_counts().unstack().reset_index()"
+    "x"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sex_[HOSPITALADMIT]</th>\n",
-       "      <th>Ethnicity_[HOSPITALADMIT]</th>\n",
-       "      <th>Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Hispanic or Latino</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Not Hispanic or Latino</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>Unknown or Not Reported</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Hispanic or Latino</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Not Hispanic or Latino</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Unknown or Not Reported</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Sex_[HOSPITALADMIT] Ethnicity_[HOSPITALADMIT]  Count\n",
-       "0              Female        Hispanic or Latino     36\n",
-       "1              Female    Not Hispanic or Latino     56\n",
-       "2              Female   Unknown or Not Reported     41\n",
-       "3                Male        Hispanic or Latino     32\n",
-       "4                Male    Not Hispanic or Latino     67\n",
-       "5                Male   Unknown or Not Reported     43"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby(vars_with_table[1:]).size().reset_index(name='Count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
