overhaul sharing of columns

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import csv\n",
@@ -24,57 +33,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['col2', 'col6', 'col1', 'col5', 'col4', 'col7', 'col3']\n",
-      "Which column labels are used to join tables together? Use space to separate them. Use * to indicate all. Case-sensitive. *\n",
-      "Do you want to exclude any of these columns from being used as data visualization inputs/outputs [Y/N]? N\n",
-      "Do you want to create other foreign key links? [Y/N]? N\n"
-     ]
-    }
-   ],
-   "source": [
-    "DB = db_structure.DB('sample2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "path = 'datasets/TOPICC/TOPICC.config'\n",
-    "with open(path, 'r') as f:\n",
-    "    x = json.load(f)\n",
-    "with open(path, 'w') as f:\n",
-    "    json.dump()"
+    "db = db_structure.DB('TOPICC')\n",
+    "all_columns = db.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'global_fks': ['PudID'], 'custom_fks': [], 'exclude_columns': ['PudID']}"
+       "{'tables': {'PHYSIOSTATUS': PHYSIOSTATUS,\n",
+       "  'PICUDISCHARGE_DISSECONDDX': PICUDISCHARGE_DISSECONDDX,\n",
+       "  'PICUADMIT_CHRONICDX': PICUADMIT_CHRONICDX,\n",
+       "  'SURGERY': SURGERY,\n",
+       "  'PICUDISCHARGE_DISCHRONICDX': PICUDISCHARGE_DISCHRONICDX,\n",
+       "  'PICUADMIT_AHD': PICUADMIT_AHD,\n",
+       "  'LIMITOFCARE': LIMITOFCARE,\n",
+       "  'HOSPITALDISCHARGE': HOSPITALDISCHARGE,\n",
+       "  'CPR': CPR,\n",
+       "  'CATASTROPHICEVENTS': CATASTROPHICEVENTS,\n",
+       "  'CARDIACPROCEDURES': CARDIACPROCEDURES,\n",
+       "  'CARDIACSURGERY': CARDIACSURGERY,\n",
+       "  'DEATH': DEATH,\n",
+       "  'PICUADMIT_CHD': PICUADMIT_CHD,\n",
+       "  'HOSPITALADMIT': HOSPITALADMIT,\n",
+       "  'PICUADMIT': PICUADMIT,\n",
+       "  'HOSPITALADMIT_CE': HOSPITALADMIT_CE,\n",
+       "  'CAREPROCESSES': CAREPROCESSES,\n",
+       "  'PICUADMIT_ADMITSECONDDX': PICUADMIT_ADMITSECONDDX,\n",
+       "  'PICUDISCHARGE': PICUDISCHARGE},\n",
+       " 'common_columns': [Column PudID in tables {DEATH, HOSPITALADMIT, PHYSIOSTATUS, CPR, PICUADMIT, CARDIACSURGERY, PICUDISCHARGE, LIMITOFCARE, HOSPITALADMIT_CE, PICUADMIT_CHRONICDX, HOSPITALDISCHARGE, CATASTROPHICEVENTS, PICUDISCHARGE_DISSECONDDX, PICUADMIT_CHD, PICUADMIT_AHD, SURGERY, PICUADMIT_ADMITSECONDDX, PICUDISCHARGE_DISCHRONICDX, CAREPROCESSES, CARDIACPROCEDURES}],\n",
+       " 'exclude_columns_from_data_viz': ['PudID']}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'PudID',\n",
+       " 'shared': True,\n",
+       " 'tables': {CARDIACPROCEDURES,\n",
+       "  CARDIACSURGERY,\n",
+       "  CAREPROCESSES,\n",
+       "  CATASTROPHICEVENTS,\n",
+       "  CPR,\n",
+       "  DEATH,\n",
+       "  HOSPITALADMIT,\n",
+       "  HOSPITALADMIT_CE,\n",
+       "  HOSPITALDISCHARGE,\n",
+       "  LIMITOFCARE,\n",
+       "  PHYSIOSTATUS,\n",
+       "  PICUADMIT,\n",
+       "  PICUADMIT_ADMITSECONDDX,\n",
+       "  PICUADMIT_AHD,\n",
+       "  PICUADMIT_CHD,\n",
+       "  PICUADMIT_CHRONICDX,\n",
+       "  PICUDISCHARGE,\n",
+       "  PICUDISCHARGE_DISCHRONICDX,\n",
+       "  PICUDISCHARGE_DISSECONDDX,\n",
+       "  SURGERY}}"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "DB.common_columns[0].__dict__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
