--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -33,21 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'shared': True,\n",
-       " 'repetitive': True,\n",
-       " 'tables': {customers, orders, payments},\n",
-       " 'table_links': {payments: 'customerNumber_[payments]',\n",
-       "  customers: 'customerNum_[customers]',\n",
-       "  orders: 'customerNum_[orders]'}}"
+       "[customers.customerNum & orders.customerNum & payments.customerNumber,\n",
+       " employees.officeCode & offices.officeCode,\n",
+       " orderdetails.productCode & products.productCode,\n",
+       " orderdetails.orderNumber & orders.orderNumber,\n",
+       " customers.employeeNumber & employees.employeeNumber,\n",
+       " productlines.productLine & products.productLine,\n",
+       " customers.LastName,\n",
+       " customers.FirstName,\n",
+       " employees.LastName,\n",
+       " employees.FirstName,\n",
+       " offices.State,\n",
+       " orderdetails.quantity,\n",
+       " orders.orderDate,\n",
+       " orders.Status,\n",
+       " payments.checkNumber,\n",
+       " payments.amount,\n",
+       " productlines.TextDesc,\n",
+       " products.productDescription]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,8 +67,7 @@
    "source": [
     "db = db_structure.DB('sample1')\n",
     "all_columns = db.columns\n",
-    "column_dict = {idx: key for idx, key in enumerate(all_columns)}\n",
-    "column_dict[0].__dict__"
+    "all_columns"
    ]
   },
   {
@@ -927,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
