--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -65,93 +65,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'finalized': True,\n",
-       " 'directory_path': 'datasets/sample1',\n",
-       " 'dataset_name': 'sample1',\n",
-       " 'data_file_extension': '.csv',\n",
-       " 'delimiter': ',',\n",
-       " 'table_names': ['payments',\n",
-       "  'offices',\n",
-       "  'products',\n",
-       "  'employees',\n",
-       "  'orderdetails',\n",
-       "  'customers',\n",
-       "  'orders',\n",
-       "  'productlines'],\n",
-       " 'table_metadata': {'payments': {'file': 'datasets/sample1/payments.csv'},\n",
-       "  'offices': {'file': 'datasets/sample1/offices.csv'},\n",
-       "  'products': {'file': 'datasets/sample1/products.csv'},\n",
-       "  'employees': {'file': 'datasets/sample1/employees.csv'},\n",
-       "  'orderdetails': {'file': 'datasets/sample1/orderdetails.csv'},\n",
-       "  'customers': {'file': 'datasets/sample1/customers.csv'},\n",
-       "  'orders': {'file': 'datasets/sample1/orders.csv'},\n",
-       "  'productlines': {'file': 'datasets/sample1/productlines.csv'}},\n",
-       " 'column_metadata': {'payments': {'customerNumber': {'type': 'MANY'},\n",
-       "   'checkNumber': {'type': 'MANY'},\n",
-       "   'amount': {'type': 'ONE'}},\n",
-       "  'offices': {'officeCode': {'type': 'ONE'}, 'State': {'type': 'ONE'}},\n",
-       "  'products': {'productCode': {'type': 'ONE'},\n",
-       "   'productLine': {'type': 'MANY'},\n",
-       "   'productDescription': {'type': 'ONE'}},\n",
-       "  'employees': {'employeeNumber': {'type': 'ONE'},\n",
-       "   'LastName': {'type': 'ONE'},\n",
-       "   'FirstName': {'type': 'ONE'},\n",
-       "   'officeCode': {'type': 'MANY'}},\n",
-       "  'orderdetails': {'orderNumber': {'type': 'ONE'},\n",
-       "   'productCode': {'type': 'MANY'},\n",
-       "   'quantity': {'type': 'MANY'}},\n",
-       "  'customers': {'customerNumber': {'type': 'ONE'},\n",
-       "   'LastName': {'type': 'ONE'},\n",
-       "   'FirstName': {'type': 'ONE'},\n",
-       "   'salesRepEmployeeNum': {'type': 'MANY'}},\n",
-       "  'orders': {'orderNumber': {'type': 'ONE'},\n",
-       "   'orderDate': {'type': 'ONE'},\n",
-       "   'Status': {'type': 'MANY'},\n",
-       "   'customerNum': {'type': 'MANY'}},\n",
-       "  'productlines': {'ProductLine': {'type': 'ONE'},\n",
-       "   'TextDesc': {'type': 'ONE'}}},\n",
-       " 'common_column_names': ['customerNumber',\n",
-       "  'officeCode',\n",
-       "  'productCode',\n",
-       "  'LastName',\n",
-       "  'FirstName',\n",
-       "  'orderNumber'],\n",
-       " 'global_fks': ['customerNumber', 'officeCode', 'productCode', 'orderNumber'],\n",
-       " 'custom_fks': [{'table_1_name': 'employees',\n",
-       "   'table_2_name': 'customers',\n",
-       "   'column_1_name': 'employeeNumber',\n",
-       "   'column_2_name': 'salesRepEmployeeNum'},\n",
-       "  {'table_1_name': 'orders',\n",
-       "   'table_2_name': 'customers',\n",
-       "   'column_1_name': 'customerNum',\n",
-       "   'column_2_name': 'customerNumber'},\n",
-       "  {'table_1_name': 'products',\n",
-       "   'table_2_name': 'productlines',\n",
-       "   'column_1_name': 'productLine',\n",
-       "   'column_2_name': 'ProductLine'}],\n",
-       " 'exclude_columns': [],\n",
-       " 'custom_column_names': {'customers': {'customerNumber': 'Customer Number',\n",
-       "   'LastName': 'Last Name'},\n",
-       "  'orders': {'customerNum': 'Customer Num'},\n",
-       "  'offices': {'State': 'state'}},\n",
-       " 'column_links': {},\n",
-       " 'column_display_names': {},\n",
-       " 'table_relationships': {}}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 2019-08-11 10:47:18,529 - INFO - Loading datasets/TOPICC\n",
+      " 2019-08-11 10:47:18,534 - INFO - Loading arch file: datasets/TOPICC/TOPICC.arch\n",
+      " 2019-08-11 10:47:18,540 - DEBUG - Loading file datasets/TOPICC/PHYSIOSTATUS.csv\n",
+      " 2019-08-11 10:47:18,650 - DEBUG - Loading file datasets/TOPICC/PICUDISCHARGE_DISSECONDDX.csv\n",
+      " 2019-08-11 10:47:18,662 - DEBUG - Loading file datasets/TOPICC/PICUADMIT_CHRONICDX.csv\n",
+      " 2019-08-11 10:47:18,691 - DEBUG - Loading file datasets/TOPICC/SURGERY.csv\n",
+      " 2019-08-11 10:47:18,718 - DEBUG - Loading file datasets/TOPICC/PICUDISCHARGE_DISCHRONICDX.csv\n",
+      " 2019-08-11 10:47:18,724 - DEBUG - Loading file datasets/TOPICC/PICUADMIT_AHD.csv\n",
+      " 2019-08-11 10:47:18,730 - DEBUG - Loading file datasets/TOPICC/LIMITOFCARE.csv\n",
+      " 2019-08-11 10:47:18,737 - DEBUG - Loading file datasets/TOPICC/HOSPITALDISCHARGE.csv\n",
+      " 2019-08-11 10:47:18,835 - DEBUG - Loading file datasets/TOPICC/CPR.csv\n",
+      " 2019-08-11 10:47:18,840 - DEBUG - Loading file datasets/TOPICC/CATASTROPHICEVENTS.csv\n",
+      " 2019-08-11 10:47:18,844 - DEBUG - Loading file datasets/TOPICC/CARDIACPROCEDURES.csv\n",
+      " 2019-08-11 10:47:18,935 - DEBUG - Loading file datasets/TOPICC/CARDIACSURGERY.csv\n",
+      " 2019-08-11 10:47:18,950 - DEBUG - Loading file datasets/TOPICC/DEATH.csv\n",
+      " 2019-08-11 10:47:18,959 - DEBUG - Loading file datasets/TOPICC/PICUADMIT_CHD.csv\n",
+      " 2019-08-11 10:47:18,973 - DEBUG - Loading file datasets/TOPICC/HOSPITALADMIT.csv\n",
+      " 2019-08-11 10:47:19,061 - DEBUG - Loading file datasets/TOPICC/PICUADMIT.csv\n",
+      " 2019-08-11 10:47:19,119 - DEBUG - Loading file datasets/TOPICC/HOSPITALADMIT_CE.csv\n",
+      " 2019-08-11 10:47:19,123 - DEBUG - Loading file datasets/TOPICC/CAREPROCESSES.csv\n",
+      " 2019-08-11 10:47:19,158 - DEBUG - Loading file datasets/TOPICC/PICUADMIT_ADMITSECONDDX.csv\n",
+      " 2019-08-11 10:47:19,169 - DEBUG - Loading file datasets/TOPICC/PICUDISCHARGE.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7341170310974121\n"
+     ]
     }
    ],
    "source": [
-    "db.__dict__"
+    "start = time.time()\n",
+    "db3 = db_structure.DB(os.path.join('datasets', 'TOPICC'))\n",
+    "dm = db_structure.DataManager(db3, load_all_data=True)\n",
+    "end = time.time()\n",
+    "print(end-start)"
    ]
   },
   {
