renamed columns, fixed one var selection bug

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -62,31 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 586,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sareen/.local/lib/python3.6/site-packages/pandas/core/indexing.py:357: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/home/sareen/.local/lib/python3.6/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chosen_ind_idxs = ['322', '5']  # Sex, lowpH\n",
-    "chosen_outcome_idx = '27'  # low CO2\n",
+    "chosen_ind_idxs = ['322']#, '5']  # Sex, lowpH\n",
+    "chosen_outcome_idx = None  # low CO2\n",
     "\n",
     "if chosen_outcome_idx is None:\n",
     "    all_chosen_idxs = chosen_ind_idxs\n",
@@ -95,16 +76,16 @@
     "\n",
     "paths = db.find_paths_multi_columns(all_chosen_idxs)\n",
     "df = dm.get_biggest_joined_df_option_from_paths(paths, filter_col_idxs=all_chosen_idxs)\n",
-    "groupby_col_headers = ['Sex_[HOSPITALADMIT]', 'LowpH_[PHYSIOSTATUS]']\n",
+    "groupby_col_headers = ['Sex_[HOSPITALADMIT]']\n",
     "outcome_col_header = 'LowCO2_[PHYSIOSTATUS]'\n",
     "\n",
-    "filters = {'5': {'type': 'range', 'filter': {'min': 3.31, 'max': 7.74, 'bins': '3'}}, '322': None, '27': None}\n",
-    "df = dm.filter_df(df, filters)"
+    "#filters = {'5': {'type': 'range', 'filter': {'min': 3.31, 'max': 7.74, 'bins': '3'}}, '322': None}\n",
+    "#df = dm.filter_df(df, filters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [
     {
@@ -128,56 +109,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>LowCO2_[PHYSIOSTATUS]</th>\n",
        "      <th>Sex_[HOSPITALADMIT]</th>\n",
-       "      <th>LowpH_[PHYSIOSTATUS]</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7.0</td>\n",
        "      <td>Female</td>\n",
-       "      <td>(6.263, 7.74]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>21.0</td>\n",
        "      <td>Male</td>\n",
-       "      <td>(6.263, 7.74]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
        "      <td>Female</td>\n",
-       "      <td>(6.263, 7.74]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>(6.263, 7.74]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>22.0</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>(6.263, 7.74]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   LowCO2_[PHYSIOSTATUS] Sex_[HOSPITALADMIT] LowpH_[PHYSIOSTATUS]\n",
-       "1                    7.0              Female        (6.263, 7.74]\n",
-       "3                   21.0                Male        (6.263, 7.74]\n",
-       "4                    NaN              Female        (6.263, 7.74]\n",
-       "5                    NaN              Female        (6.263, 7.74]\n",
-       "6                   22.0                Male        (6.263, 7.74]"
+       "  Sex_[HOSPITALADMIT]\n",
+       "0                Male\n",
+       "1              Female\n",
+       "2                Male\n",
+       "3                Male\n",
+       "4              Female"
       ]
      },
-     "execution_count": 532,
+     "execution_count": 587,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 589,
    "metadata": {},
    "outputs": [
     {
@@ -212,64 +181,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>LowCO2_[PHYSIOSTATUS]</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Sex_[HOSPITALADMIT]</th>\n",
-       "      <th>LowpH_[PHYSIOSTATUS]</th>\n",
-       "      <th></th>\n",
+       "      <th>Count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">Female</th>\n",
-       "      <th>(3.306, 4.787]</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>4548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>(4.787, 6.263]</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(6.263, 7.74]</th>\n",
-       "      <td>20.887507</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">Male</th>\n",
-       "      <th>(3.306, 4.787]</th>\n",
-       "      <td>22.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(4.787, 6.263]</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(6.263, 7.74]</th>\n",
-       "      <td>21.535336</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>5530</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                          LowCO2_[PHYSIOSTATUS]\n",
-       "Sex_[HOSPITALADMIT] LowpH_[PHYSIOSTATUS]                       \n",
-       "Female              (3.306, 4.787]                          NaN\n",
-       "                    (4.787, 6.263]                          NaN\n",
-       "                    (6.263, 7.74]                     20.887507\n",
-       "Male                (3.306, 4.787]                    22.000000\n",
-       "                    (4.787, 6.263]                          NaN\n",
-       "                    (6.263, 7.74]                     21.535336"
+       "  Sex_[HOSPITALADMIT]  Count\n",
+       "0              Female   4548\n",
+       "1                Male   5530"
       ]
      },
-     "execution_count": 567,
+     "execution_count": 589,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_t = (df.groupby(groupby_col_headers).mean())#.round(2).reset_index()\n",
+    "df_t = df.groupby(groupby_col_headers).size().reset_index(name=\"Count\")#.unstack()#mean())#.round(2).reset_index()\n",
     "#df_t['LowCO2_[PHYSIOSTATUS]'] = df_t['LowCO2_[PHYSIOSTATUS]'].fillna(0)\n",
     "df_t"
    ]
